compiler/tests/should-fail/MalformedProtocolAnnotation2.via
/* MalformedProtocolAnnotationError */

host alice

fun main() {
    val x:int@Commitment(sender = alice, receivers = {}) = 5;
}
